--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,7 @@
-aiohttp==3.6.2
-config==0.5.0.post0
+Click==7.0
 Flask==1.1.2
-gunicorn==20.0.4
-Jinja2==2.11.2
-Pillow==7.1.1
-sqlparse==0.3.1
-websockets==8.1
+gunicorn==19.9.0
+itsdangerous==1.1.0
+Jinja2==2.10.1
+MarkupSafe==1.1.1
+Werkzeug==0.15.6
