--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
 Flask==1.1.2
+Flask-SQLAlchemy==2.4.4
 gunicorn==20.0.4
-Jinja2==2.11.2
-Werkzeug~=1.0.1
+SQLAlchemy==1.3.22
+websockets==8.1
+Werkzeug==1.0.1
