--- a/requirements.txt
+++ b/requirements.txt
@@ -6,5 +6,7 @@ gunicorn==20.1.0
 itsdangerous==1.1.0
 Jinja2==2.11.3
 MarkupSafe==1.1.1
-SQLAlchemy==1.4.3
+psycopg2==2.8.6
+websockets==8.1
+SQLAlchemy==1.3.23
 Werkzeug==1.0.1
